--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/next": "^1.4.9",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.99.0",
     "next": "15.3.5",
