--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-sanity": "^9.12.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-scroll": "^1.9.3",
     "sanity": "^3.99.0",
     "styled-components": "^6.1.19"
   },
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "tailwindcss": "^4",
