--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll": "^1.9.3",
+    "react-fast-marquee": "^1.6.5",
     "sanity": "^3.99.0",
-    "styled-components": "^6.1.19"
+    "styled-components": "^6.1.19",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
